added s3 functionality